refactor: reorganizations in the source code

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
 .idea
 .vscode
 __pycache__
+
+docs/
+out/
+
+# latex files
+*.tex
+*.bib
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.fls
+*.synctex.gz
+*.fdb_latexmk
